--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,8 @@ v0.0.2 (in development)
 
 **New Features:**
 
+*   Single Blog Mode. See configuration.txt
+*   Optional google analytic track code per blog
 *   Use feed url provided by feed service instead of original url
 
 v0.0.1
